[metadata]
name = db_migration
version = 0.0.1
summary = OpenStack db_migration
description-file =
	README.md
author = zhangpanpan
author-email = g_zhangpp@163.com
classifier =
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: System :: Monitoring

[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages =
	db_migration
data_files =
	etc/db_migration = etc/db_migration/*

[entry_points]

[build_sphinx]
warning-is-error = False


[egg_info]
tag_build =
tag_date = 0